WebCore:

Reviewed by Darin.

        DOMRange.cloneContents does not work (Acid3 bug)
        http://bugs.webkit.org/show_bug.cgi?id=16748

        When cloning an empty range, return an empty DocmentFragment instead of
        null or undefined.

        Test: fast/dom/Range/range-clone-empty.html

        * dom/Range.cpp:
        (WebCore::Range::processContents):

LayoutTests:

        Reviewed by Darin.

        DOMRange.cloneContents does not work (Acid3 bug)
        http://bugs.webkit.org/show_bug.cgi?id=16748

        When cloning an empty range, return an empty DocmentFragment instead of
        null or undefined.

        * fast/dom/Range/range-clone-empty-expected.txt: Added.
        * fast/dom/Range/range-clone-empty.html: Added.
        * fast/dom/Range/resources/range-clone-empty.js: Added.



Canonical link: https://commits.webkit.org/23045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29207 268f45cc-cd09-0410-ab3c-d52691b4dbfc