WebCore/dom/Range.cpp
@@ -633,9 +633,13 @@ PassRefPtr<DocumentFragment> Range::processContents ( ActionType action, Excepti
 
     // ### perhaps disable node deletion notification for this range while we do this?
 
+    RefPtr<DocumentFragment> fragment;
+    if (action == EXTRACT_CONTENTS || action == CLONE_CONTENTS)
+        fragment = new DocumentFragment(m_ownerDocument.get());
+    
     ec = 0;
     if (collapsed(ec))
-        return 0;
+        return fragment.release();
     if (ec)
         return 0;
 
@@ -658,10 +662,6 @@ PassRefPtr<DocumentFragment> Range::processContents ( ActionType action, Excepti
         while (partialEnd->parentNode() != cmnRoot)
             partialEnd = partialEnd->parentNode();
     }
-
-    RefPtr<DocumentFragment> fragment;
-    if (action == EXTRACT_CONTENTS || action == CLONE_CONTENTS)
-        fragment = new DocumentFragment(m_ownerDocument.get());
 
     // Simple case: the start and end containers are the same. We just grab
     // everything >= start offset and < end offset
