LayoutTests/fast/dom/Range/resources/range-clone-empty.js
@@ -1,0 +1,9 @@
+description(
+"This test checks cloning an empty range returns an empty fragment."
+);
+
+var r = document.createRange();
+shouldBeTrue("r.cloneContents() != undefined");
+shouldBeTrue("r.cloneContents() != null");
+
+var successfullyParsed = true;
